Se integra ipfs y se hace deploy de los programas  en la devnet

--- a/app/env.local.example
+++ b/app/env.local.example
@@ -2,6 +2,14 @@
 # Obtén tu Project ID en: https://cloud.reown.com/
 NEXT_PUBLIC_PROJECT_ID=your-project-id-here
 
+# Solana Configuration
+NEXT_PUBLIC_SOLANA_RPC_URL=https://api.devnet.solana.com
+NEXT_PUBLIC_SOLANA_PROGRAM_ID=8WHFEQ7BdDhoKhdudmjnGwypsibeJjdRoTPgQg2AFrXH
+
+# Pinata Configuration
+NEXT_PUBLIC_PINATA_API_KEY=your_pinata_api_key_here
+NEXT_PUBLIC_PINATA_SECRET_KEY=your_pinata_secret_key_here
+
 # Opcional: Configuración de red personalizada
 # NEXT_PUBLIC_SOLANA_RPC_URL=https://api.mainnet-beta.solana.com
 # NEXT_PUBLIC_SOLANA_NETWORK=mainnet-beta
