--- a/Anchor.toml
+++ b/Anchor.toml
@@ -6,13 +6,16 @@ resolution = true
 skip-lint = false
 
 [programs.localnet]
-mnemosine = "7Q811Ki9dNuqshsadARZAfLdHoDmUejkGAXbdDFAkVyw"
+mnemosine = "8WHFEQ7BdDhoKhdudmjnGwypsibeJjdRoTPgQg2AFrXH"
+
+[programs.devnet]
+mnemosine = "8WHFEQ7BdDhoKhdudmjnGwypsibeJjdRoTPgQg2AFrXH"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "localnet"
+cluster = "devnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
