--- a/app/package.json
+++ b/app/package.json
@@ -9,13 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@reown/appkit": "^1.8.10",
-    "@reown/appkit-adapter-solana": "^1.8.10",
+    "@coral-xyz/anchor": "^0.32.1",
+    "@reown/appkit": "^1.8.11",
+    "@reown/appkit-adapter-solana": "^1.8.11",
+    "@reown/appkit-adapter-wagmi": "^1.8.11",
+    "@solana/wallet-adapter-base": "^0.9.27",
+    "@solana/wallet-adapter-react": "^0.15.39",
+    "@solana/wallet-adapter-react-ui": "^0.9.39",
     "@solana/wallet-adapter-wallets": "^0.19.37",
+    "@solana/web3.js": "^1.98.4",
+    "@tanstack/react-query": "^5.90.5",
     "framer-motion": "^10.16.0",
     "next": "14.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "viem": "^2.38.4",
+    "wagmi": "^2.18.2"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
