Se mejora el proceso para poder hacer transacciones

--- a/app/env.local.example
+++ b/app/env.local.example
@@ -2,8 +2,8 @@
 # Obtén tu Project ID en: https://cloud.reown.com/
 NEXT_PUBLIC_PROJECT_ID=your-project-id-here
 
-# Solana Configuration
-NEXT_PUBLIC_SOLANA_RPC_URL=https://api.devnet.solana.com
+# Solana Configuration - Usando Helius RPC con API key
+NEXT_PUBLIC_SOLANA_RPC_URL=https://devnet.helius-rpc.com/?api-key=9a6b745a-96e0-4751-8be0-bf23ce3b2327
 NEXT_PUBLIC_SOLANA_PROGRAM_ID=8WHFEQ7BdDhoKhdudmjnGwypsibeJjdRoTPgQg2AFrXH
 
 # Pinata Configuration
